move cuda stuff to ipd/cuda and ipd/tests/cuda, remove cuda stuff from tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ ipd = 'ipd.__main__:main'
 [tool.pytest.ini_options]
 minversion = '6.0'
 addopts = '-m "not ci" --disable-warnings --doctest-continue-on-failure'
+ignore = ['ipd/cuda', 'ipd/tests/cuda']
 
 testpaths = [
     'ipd/tests',
