Enhance documentation and code clarity across multiple modules
- **ContactMatrixStack Module:**
  - Expanded module-level docstring with a detailed explanation of the 1D cumulative sum approach, laying the foundation for the 2D implementation.
  - Added a fixed-width ASCII example to illustrate indexing and cumulative sum calculations (e.g., SUM[j] - SUM[i]).
  - Improved formatting to ensure correct rendering in Sphinx-generated documentation.

- **Other Modules:**
  - Updated module-level docstrings and inline comments to improve clarity and consistency with the latest documentation standards.
  - Refactored redundant or outdated commentary to streamline the documentation and prevent duplicate object warnings.
  - Adjusted Sphinx directive usage to ensure all examples and code blocks render correctly.

Overall, these changes enhance the maintainability and readability of the codebase while improving the accuracy and clarity of the generated documentation.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,6 +18,5 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	rm -rf _apidoc
-# 	sphinx-apidoc -o docs/_apidoc ../ipd --separate --module-first --force
-	sphinx-apidoc --separate --module-first --force -o _apidoc ../ipd ../ipd/cython ../ipd/tests ../ipd/voxel ../ipd/rms ../ipd/sam
+	sphinx-apidoc --separate --module-first --force -o _apidoc ../ipd ../ipd/cython ../ipd/tests/cuda ../ipd/cuda ../ipd/tests
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
