--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,25 @@
 [build-system]
-requires = ["hatchling", "hatch-cython"]
-build-backend = "hatchling.build"
+requires = ['hatchling', 'hatch-cython']
+build-backend = 'hatchling.build'
 
 # [tool.hatch.build.targets.wheel.hooks.cython]
-# sources = ["src/my_package/**/*.pyx"]
-# extra_compile_args = ["-O3"]
+# sources = ['src/my_package/**/*.pyx']
+# extra_compile_args = ['-O3']
 
 #[tool.hatch.build.targets.wheel]
-#only-include = ["ipd"]
+#only-include = ['ipd']
 #
 #[tool.hatch.build.targets.wheel.hooks.cython]
-#dependenciees = ["hatch-cython"]
+#dependenciees = ['hatch-cython']
 #
 [tool.hatch.metadata]
 allow-direct-references = true
 #
 #[build.targets.wheel.hooks.cython.options.files]
-#targets = ["ipd/cython/dynamic_float_array.pyx"]
+#targets = ['ipd/cython/dynamic_float_array.pyx']
 #
 # [tool.hatch.build.hooks.custom]
-# path = "build.py"
+# path = 'build.py'
 
 [project]
 name = 'ipd'
@@ -31,7 +31,7 @@ dependencies = [
     'compact-json',
     'evn',
     'gitpython',
-    "hgeom",
+    'hgeom',
     'hydra-core',
     'hypothesis',
     'icecream',
@@ -48,15 +48,15 @@ dependencies = [
     # 'seaborn',
     'tomli',
     'typer',
-    "toolz",
+    'toolz',
     'pytest',
 ]
 [project.optional-dependencies]
 crud = [
-    'fastapi[standard]',
+    'fastapi',
     # 'psycopg2',
     'sqlmodel',
-    'uvicorn[standard]',
+    'uvicorn',
     'pdot',
 ]
 tools = [
@@ -68,27 +68,30 @@ ml = [
     'torch',
     'pandas',
     'biotite',
+    'Bio',
 ]
-# docs = [
-#     'sphinx',
-#     'sphinx-pydata-theme',
-#     'matplotlib',
-#     'pybtex',
-#     'sphinx_gallery',
-#     'apidoc',
-#     'bibliography',
-#     'preamble',
-#     'scraper',
-#     'switcher',
-# ]
+docs = [
+    'sphinx',
+    'sphinx-pydata-theme',
+    'matplotlib',
+    # 'pybtex',
+    'sphinx_gallery',
+    # 'apidoc',
+    # 'bibliography',
+    # 'preamble',
+    # 'scraper',
+    # 'switcher',
+    'urllib3>2',
+]
 dev = [
     'debugpy',
     'hypothesis[numpy]',
-    "pytest",
+    'pytest',
     'pytest-xdist',
     'gitpython',
     'jinja2',
     'nox',
+    'packaging',
     'pytest-xdist',
     'pytest-sugar',
     'pytest-cov',
@@ -100,9 +103,10 @@ dev = [
     'yapf',
 ]
 all = [
-    "biotite",
+    'Bio',
+    'biotite',
     'debugpy',
-    'fastapi[standard]',
+    'fastapi',
     'gitpython',
     'jinja2',
     'pandas',
@@ -112,7 +116,7 @@ all = [
     'sqlmodel',
     'submitit',
     'torch',
-    'uvicorn[standard]',
+    'uvicorn',
 ]
 [project.scripts]
 ipd = 'ipd.__main__:main'
@@ -150,10 +154,10 @@ blank_lines_around_top_level_definition = 1
 arithmetic_precedence_indication = true
 
 # [tool.pyright]
-# pythonVersion = "3.12"
-# pythonPlatform = "Linux"
-# venvPath = "/home/sheffler/sw/MambaForge/envs"
-# venv = "rfdsym312"
+# pythonVersion = '3.12'
+# pythonPlatform = 'Linux'
+# venvPath = '/home/sheffler/sw/MambaForge/envs'
+# venv = 'rfdsym312'
 # include = ['ipd']
 # exclude = [
 #     # 'ipd/crud/*',
