Add GitHub Actions docs workflow, update Sphinx config, and begin dev guide
 - Replaced deprecated snorkell workflow with .github/workflows/build_docs.yaml to build and deploy docs on push to docs branch using uv and sphinx-build.
 - Switched Sphinx theme to pydata_sphinx_theme with updated Python 3.13-compatible configuration.
 - Added a developer guide under docs/dev_guide/ with sections on coding, testing, dependencies, and tooling.
 - Introduced tutorial on ContactMatrixStack and expanded homog tutorial with detailed examples.
 - Updated Makefile and .readthedocs.yaml to use sphinx-apidoc and new theme.
 - Bumped IPD version to 0.3.7, made dependencies Python ≥3.9 compatible, and updated optional extras.
 - Renamed ide_tool.py to idetool.py, fixed class name, and improved CLI file dispatch for .rst doctests.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,12 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  jobs:
+    pre_build:
+      - cd docs
+      - rm -rf _apidoc
+      - sphinx-apidoc --separate --module-first --force -o _apidoc ../ipd ../ipd/cython ../ipd/tests/cuda ../ipd/cuda ../ipd/tests
+
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
