--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ allow-direct-references = true
 
 [project]
 name = 'ipd'
-version = '0.2'
-requires-python = '>3.9,<4' # for woodys old pipeline stuff
+version = '0.3.7'
+requires-python = '>=3.9' # for woodys old pipeline stuff
 dependencies = [
     'assertpy',
     'colorlog',
@@ -71,11 +71,19 @@ ml = [
     'Bio',
 ]
 docs = [
-    'sphinx',
-    'sphinx-pydata-theme',
+    'sphinx>8;python_version>="3.13"',
+    # 'sphinx-pydata-theme',
+    'pydata-sphinx-theme',
+    # 'sphinx-rtd-theme',
     'matplotlib',
     # 'pybtex',
     'sphinx_gallery',
+    'standard-imghdr',
+    'torch',
+    'fastapi',
+    'sqlalchemy',
+    'sqlmodel',
+    # 'uvicorn',
     # 'apidoc',
     # 'bibliography',
     # 'preamble',
