--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
       - name: Sphinx build
         run: |
+          cd docs
           rm -rf _apidoc
           uv run --extra docs sphinx-apidoc --separate --module-first --force -o _apidoc ../ipd ../ipd/cython ../ipd/tests/cuda ../ipd/cuda ../ipd/tests
           uv run --extra docs sphinx-build -M html "." "_build"
