feat(docs): improve Sphinx docs and symmetry detection; switch deploy branch to main
- Changed GitHub Pages deploy condition to `main` branch in CI workflow.
- Enabled `sphinx.ext.doctest` and added custom CSS to documentation config.
- Added intersphinx mappings for Biotite and NumPy.
- Major expansion of `working_with_atoms.rst` with detailed examples and doctests.
- Reorganized tutorial index to include new pages on assemblies, bodies, and symmetry.
- Improved formatting and content for `contact_matrix.rst`.
- Upgraded `hgeom` dependency to `>=2.0.5` in `pyproject.toml`.
- Enhanced symmetry detection:
  - Added `component`, `components`, and `asu_components` tracking to `SymInfo`.
  - Refactored `__post_init__` and removed `_syminfo_post_init`.
  - Improved formatting in `syminfo_to_str`, including component-wise metrics.
  - Added better support for large symmetry orders.
- Added `enumerate_intermediates()` method to `Components`.
- Allowed `enumerate()` without arguments in `subscriptable_for_attributes`.
- Minor bug fixes and comment cleanup throughout tests and support code.
- Updated tests to use `capture_stdio()` for printing `SymInfo`.
- Minor clarification edits in `dependencies.rst`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ dependencies = [
     'compact-json',
     'evn',
     'gitpython',
-    'hgeom',
+    'hgeom>=2.0.5',
     'hydra-core',
     'hypothesis',
     'icecream',
