docs, deps, ipd: update Sphinx configuration and refactor decorators
- Revise docs/conf.py:
  - Use consistent single quotes.
  - Add new Sphinx extensions (sphinx-copybutton, sphinx-prompt, sphinxemoji, sphinx-last-updated-by-git).
  - Remove sphinx_gallery.gen_gallery and update autodoc options.

- Add new documentation files:
  - Create docs/modules.rst for API reference.
  - Add tutorials for class decorators (docs/tutorials/class_decorators.rst) and function decorators (docs/tutorials/function_decorators.rst).
  - Update tutorials index to include the new tutorials and remove outdated sections.

- Update ipd package:
  - Expose decorators (subscriptable_for_attributes, iterize_on_first_param, element_wise_operations) via ipd/__init__.py.
  - Change decorator imports in ipd/atom/assembly.py and ipd/atom/components.py to use the new paths (ipd.subscriptable_for_attributes, ipd.element_wise_operations).

- Refactor ipd/dev/decorators.py:
  - Improve Sphinx-style docstrings (including module docstring) and add doctest-compatible examples.
  - Reorder and simplify code for the class decorator subscriptable_for_attributes.

- Update tests and uv dependency files:
  - Adjust tests to reflect updated decorator imports.
  - Bump dependency versions (e.g. uvicorn, new Sphinx extensions) in pyproject.toml and uv.lock.

This commit improves documentation quality and developer usability of the decorators.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,10 @@ ml = [
 ]
 docs = [
     'sphinx>8;python_version>="3.13"',
-    # 'sphinx-pydata-theme',
+    'sphinx-copybutton',
+    'sphinx-prompt',
+    'sphinxemoji',
+    'sphinx-last-updated-by-git',
     'pydata-sphinx-theme',
     # 'sphinx-rtd-theme',
     'matplotlib',
@@ -83,7 +86,7 @@ docs = [
     'fastapi',
     'sqlalchemy',
     'sqlmodel',
-    # 'uvicorn',
+    'uvicorn>=0.34',
     # 'apidoc',
     # 'bibliography',
     # 'preamble',
