docs: Various documentation improvements and fixes
- .gitignore: Ignore _apidoc directory.
- docs/conf.py: Configure linkcode, adjust Sphinx settings.
- docs/index.rst: Add _apidoc and examples to index.
- docs/tutorials/class_decorators.rst: Update with ipd prefix, fix doctests.
- docs/tutorials/function_decorators.rst: Update with ipd prefix, clarify output.
- docs/tutorials/processing_assemblies.rst: Improve formatting and clarity.
- docs/tutorials/symmetry_detection.rst: Enhance formatting and clarity.
- docs/tutorials/using_homog.rst: Correct typo, improve formatting.

This commit addresses several documentation issues, including:

- Ignoring the `_apidoc` directory in `.gitignore`.
- Configuring the `linkcode` Sphinx extension and adjusting other settings.
- Adding links to API documentation and examples in `index.rst`.
- Updating tutorial imports with `ipd` prefixes and fixing doctest outputs.
- Improving formatting and clarity across multiple tutorial files.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,16 +77,18 @@ docs = [
     'sphinxemoji',
     'sphinx-last-updated-by-git',
     'pydata-sphinx-theme',
-    # 'sphinx-rtd-theme',
     'matplotlib',
     # 'pybtex',
     'sphinx_gallery',
     'standard-imghdr',
-    'torch',
     'fastapi',
     'sqlalchemy',
     'sqlmodel',
     'uvicorn>=0.34',
+    'biotite',
+    'torch',
+    'Bio',
+    'pandas',
     # 'apidoc',
     # 'bibliography',
     # 'preamble',
@@ -159,7 +161,7 @@ markers = [
 [tool.yapf]
 based_on_style = 'pep8'
 indent_width = 4
-column_limit = 111
+column_limit = 100
 blank_line_before_nested_class_or_def = true
 blank_lines_around_top_level_definition = 1
 arithmetic_precedence_indication = true
@@ -209,7 +211,7 @@ lint.ignore = [
 
 ]
 lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
-line-length = 113
+line-length = 100
 target-version = 'py39'
 format.quote-style = 'single'
 format.indent-style = 'space'
