feat: Rename cumsum to partialsum, add fuzzy search to Bunch
This commit renames `cumsum` to `partialsum` for clarity and consistency across the codebase. It also adds a fuzzy search functionality to the `Bunch` class, allowing for more flexible key lookups. Additionally, it addresses several minor issues and improves code readability.

**Changes:**

- Renamed `cumsum2d.png` to `partialsum2d.png`.
- Replaced `np.cumsum` with `ipd.partialsum` (which is aliased to `np.cumsum`) in relevant documentation and code.
- Updated documentation to reflect the name change and improve clarity.
- Implemented fuzzy search in `Bunch` class, enabling approximate key matching.
- Added `strmatch` helper function for fuzzy string comparison.
- Added `wrap_ctx` to `iterize_on_first_param` to allow for context passing in decorators.
- Added `indent` context manager to `ipd.dev.contexts` for indented printing.
- Added `info` function to `ipd.atom.atom_utils` for printing atom information with indentation.
- Modified `SymBody` class to handle `Body` objects in `asu` attribute.
- Modified `BodyContacts` class to handle `subs` and `exclude` attributes correctly.
- Added `subunit_contacts` and `subunit_contact_matrix` methods to `SymBody`.
- Added a new test pickle file `6u9d_Q_1.pickle.gz`.
- Minor code refactoring and improvements for readability and maintainability.
- Added `ml` to lazy imports.
- Updated `summary` function in `ipd.dev.format` to include center of mass for `AtomArray`.

This commit aims to improve the codebase's clarity, functionality, and maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     'opt_einsum',
     # 'pandas',
     'pydantic',
+    'rapidfuzz',
     'requests',
     'requests_cache',
     'rich',
