--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,8 @@ tools = [
 ml = [
     'torch',
     'pandas',
-    'biotite',
+    'biotite>1.1; python_version>="3.10"',
+    'biotite; python_version<"3.10"',
     'Bio',
 ]
 docs = [
@@ -86,7 +87,8 @@ docs = [
     'sqlalchemy',
     'sqlmodel',
     'uvicorn>=0.34',
-    'biotite',
+    'biotite>1.1; python_version>="3.10"',
+    'biotite; python_version<"3.10"',
     'torch',
     'Bio',
     'pandas',
@@ -118,7 +120,8 @@ dev = [
 ]
 all = [
     'Bio',
-    'biotite',
+    'biotite>1.1; python_version>="3.10"',
+    'biotite; python_version<"3.10"',
     'debugpy',
     'fastapi',
     'gitpython',
