--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ allow-direct-references = true
 
 [project]
 name = 'ipd'
-version = '0.3.8'
+version = '0.3.9'
 requires-python = '>=3.9' # for woodys old pipeline stuff
 dependencies = [
     'assertpy',
@@ -32,7 +32,8 @@ dependencies = [
     'evn',
     'gitpython',
     'hgeom>=2.0.5',
-    'hydra-core',
+    'httpx>=0.20',
+    'hydra-core>=1.3.2',
     'hypothesis',
     'icecream',
     'lark',
@@ -66,9 +67,9 @@ tools = [
     'jinja2',
     ]
 ml = [
-    'torch',
+    'torch==2.6.0',
     'pandas',
-    'biotite>1.1; python_version>="3.10"',
+    'biotite>=1.2; python_version>="3.10"',
     'biotite; python_version<"3.10"',
     'Bio',
 ]
@@ -87,9 +88,9 @@ docs = [
     'sqlalchemy',
     'sqlmodel',
     'uvicorn>=0.34',
-    'biotite>1.1; python_version>="3.10"',
+    'biotite>=1.2; python_version>="3.10"',
     'biotite; python_version<"3.10"',
-    'torch',
+    'torch==2.6.0',
     'Bio',
     'pandas',
     # 'apidoc',
@@ -111,7 +112,7 @@ dev = [
     'pytest-xdist',
     'pytest-sugar',
     'pytest-cov',
-    'pytest-benchmark',
+    # 'pytest-benchmark',
     'pytest-dotenv',
     'basedpyright',
     'ruff',
@@ -119,22 +120,34 @@ dev = [
     'yapf',
 ]
 all = [
+    # 'psycopg2',
     'Bio',
-    'biotite>1.1; python_version>="3.10"',
+    'basedpyright',
     'biotite; python_version<"3.10"',
+    'biotite>=1.2; python_version>="3.10"',
     'debugpy',
     'fastapi',
     'gitpython',
+    'hypothesis[numpy]',
     'jinja2',
+    'nox',
+    'packaging',
     'pandas',
     'pdot',
-    # 'psycopg2',
+    'pytest',
+    # 'pytest-benchmark',
+    'pytest-cov',
+    'pytest-dotenv',
+    'pytest-sugar',
+    'pytest-xdist',
+    'ruff',
     'scipy',
     'sqlmodel',
     'submitit',
-    'torch',
+    'torch==2.6.0',
     'uvicorn',
-]
+    'validate-pyproject[all]',
+    'yapf',]
 [project.scripts]
 ipd = 'ipd.__main__:main'
 
